# meson-minimal-repro1

./: README.md  main.c  meson.build
subprojects/sub1/: meson.build  mylib.c
subprojects/sub1/include/: mylib.h
